--- a/notebooks/5a_quality_prediction.ipynb
+++ b/notebooks/5a_quality_prediction.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "Get creative :-)\n",
     "\n",
-    "**Tip:** To use your model within the app's backend later (notebook `b`), it's important that your final model incl. all necessary preprocessing steps are combined in a single estimator object . This can be accomplished with sklearn's [`make_pipeline`](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.make_pipeline.html) function. If necessary, you could even write a [custom transformer](https://towardsdatascience.com/pipelines-custom-transformers-in-scikit-learn-the-step-by-step-guide-with-python-code-4a7d9b068156) to perform more fancy feature engineering steps than what is provided by sklearn.\n"
+    "**Tip:** To use your model within the app's backend later (notebook `b`), it's important that your final model incl. all necessary preprocessing steps are combined in a single estimator object. This can be accomplished with sklearn's [`make_pipeline`](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.make_pipeline.html) function. If necessary, you could even write a [custom transformer](https://towardsdatascience.com/pipelines-custom-transformers-in-scikit-learn-the-step-by-step-guide-with-python-code-4a7d9b068156) to perform more fancy feature engineering steps than what is provided by sklearn.\n"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "# for the prediction task we use only the 28-day samples \n",
-    "df = df.loc[df[\"age\"] == 28].reset_index()\n",
+    "df = df.loc[df[\"age\"] == 28].reset_index(drop=True)\n",
     "df"
    ]
   },
