--- a/test_installation.ipynb
+++ b/test_installation.ipynb
@@ -17,14 +17,16 @@
     "# they should not be too much behind the ones in the comments...\n",
     "import numpy\n",
     "print(\"numpy\", numpy.__version__)        # >= 1.22.3\n",
+    "import matplotlib\n",
+    "print(\"matplotlib\", matplotlib.__version__)  # >= 3.5.1\n",
     "import pandas\n",
     "print(\"pandas\", pandas.__version__)      # >= 1.4.2\n",
     "import scipy\n",
     "print(\"scipy\", scipy.__version__)        # >= 1.8.0\n",
     "import sklearn\n",
     "print(\"sklearn\", sklearn.__version__)    # >= 1.2.0\n",
-    "import matplotlib\n",
-    "print(\"matplotlib\", matplotlib.__version__)  # >= 3.5.1\n",
+    "import joblib\n",
+    "print(\"joblib\", joblib.__version__)    # >= 1.2.0\n",
     "import PIL\n",
     "print(\"pillow\", PIL.__version__)         # >= 9.1.0\n",
     "import plotly\n",
@@ -76,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
