--- a/notebooks/4_analyze_toydata.ipynb
+++ b/notebooks/4_analyze_toydata.ipynb
@@ -630,9 +630,10 @@
    "source": [
     "# you can also check how each feature influences the prediction\n",
     "# with a partial dependence plot (works for any model)\n",
-    "plt.figure(figsize=(10, 5))\n",
+    "plt.figure(figsize=(12, 3))\n",
+    "plot_cols = ['height', 'width', 'depth', 'temp']  # use only continuous variables\n",
     "display = PartialDependenceDisplay.from_estimator(\n",
-    "    clf, X_train, feature_cols, kind=\"both\", subsample=50, line_kw={\"color\": '#15317E', \"label\": None},\n",
+    "    clf, X_train, plot_cols, kind=\"both\", subsample=50, line_kw={\"color\": '#15317E', \"label\": None},\n",
     "    n_cols=4, n_jobs=-1, grid_resolution=20, random_state=13, ax=plt.gca()\n",
     ")\n",
     "display.figure_.subplots_adjust(wspace=0.1, hspace=0.5)"
